--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,29 +1,33 @@
-{% include '/home/bcane/bclog/templates/base-header.html' %}
-<div class="container">
-<div class="row">
-  {% if data['tochtml'] %}
-  <div class="col-md-3 visible-lg">
-  <h4>Table of Contents</h4>
-  <ul class="list-group">
-     {{ data['tochtml'] }}
-  </ul>
-<div align="center">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 160 wide skyscraper -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:160px;height:600px"
-     data-ad-client="ca-pub-0946238287085890"
-     data-ad-slot="3040400288"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-  </div>
-  </div>
-{% endif %}
-  <div class="col-md-10">
-        <div class="panel-primary">
+<!DOCTYPE html>
+<html lang="en">
+
+{% include "/home/bcane/bclog/templates/header.html" %}
+<body>
+
+{% include "/home/bcane/bclog/templates/navbar.html" %}
+    <!-- Page Header -->
+    <!-- Set your background image for this header on the line below. -->
+    <header class="intro-header" style="background-image: url('http://bencane.com/static/img/archive-bg.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="page-heading">
+                        <h1>Archive</h1>
+                        <hr class="small">
+                        <span class="subheading">A collection of articles</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+ 	<div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">{{ data['rowtitle'] }}</h3>
+          <h3 class="panel-title">The Archives</h3>
         </div>
         <table class="table table-striped table-hover">
           <thead>
@@ -51,14 +55,27 @@
 
           </tbody>
         </table>
-
+	</div>
+            </div>
         </div>
-  </div>
-</div>
-</div>
-</div>
+    </div>
 
-{% include '/home/bcane/bclog/templates/disqus.html' %}
-{% include '/home/bcane/bclog/templates/authorinfo.html' %}
-{% include '/home/bcane/bclog/templates/absolute-footer.html' %}
+    <hr>
 
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+		    {% include '/home/bcane/bclog/templates/shareaholic.html' %}
+                    <p class="copyright text-muted">Copyright &copy; Benjamin Cane 2014 - <a href="mailto:ben@bencane.com?subject=Sponsorship of BenCane.com">Sponsor this blog</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+{% include "/home/bcane/bclog/templates/js_includes.html" %}
+
+</body>
+
+</html>
