--- a/templates/authorinfo.html
+++ b/templates/authorinfo.html
@@ -1,28 +1,48 @@
-<div class="footer">
-<div class="container">
   <div class="row">
     <div class="col-md-4">
       <!--Sidebar content-->
-      <img src="{{ data['siteurl'] }}/img/benc380x250.png" alt="Picture of Benjamin Cane" class="img-rounded img-responsive" />
+  <p>    <img src="{{ data['siteurl'] }}/static/img/benc380x250.png" alt="Picture of Benjamin Cane" class="img-rounded img-responsive" /></p>
     </div>
 
     <div class="col-md-8">
-      <!--Body content-->
-      <h3 class="footerh3">Benjamin Cane <i class="fa fa-linux fa-2x"></i></h3>
-                        <p></p>
-                            <p>
-                            Benjamin the founder of <a href="https://cloudrout.es">CloudRoutes</a> and a Solutions Architect working on High & Continuous Availability systems in the financial services industry. He has been Administrating Linux and Unix systems for about 10+ years. You might find him writing and sharing stories about Linux, Unix, Python, DevOps, and other various Sysadmin-like things.
-                          </p>
-                        <!-- Split button -->
-                        <p>
-          <a class="btn btn-primary" href="https://twitter.com/madflojo"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a> 
-          <a class="btn btn-primary" href="https://plus.google.com/+BenjaminCane?rel=authors"><i class="fa fa-google-plus-square fa-lg"></i> Google+</a> 
-          <a class="btn btn-primary" href="http://www.linkedin.com/in/bencane"><i class="fa fa-linkedin-square fa-lg"></i> LinkedIn</a>
-          <a class="btn btn-primary" href="{{ data['sitefeed'] }}"><i class="fa fa-rss-square fa-lg"></i> RSS</a>
-          <a class="btn btn-primary" href="http://bencane.us7.list-manage1.com/subscribe?u=52bad2a14ba3306a494c9739f&id=848cc53f28"><i class="fa fa-envelope fa-lg"></i> Email</a>
+                            <p>Benjamin is a Solutions Architect working on High and Continuous Availability systems in the financial services industry. He has been working with Linux and Unix systems for over 10 years. He is also the creator of <a href="https://runbook.io">Runbook.io</a> an open source application designed to identify and automatically mitigate infrastructure and application issues. You can think of it as IFTTT meets Nagios.</p>
 
-                        </p>
+<p>In addition to blogging Benjamin is also a public speaker and has recently given a talk at SaltConf 2014 on <a href="http://www.slideshare.net/SaltStack/saltconf14-ben-cane-using-saltstack-in-high-availability-environtments">utilizing Saltstack within highly available enterprise environments</a>.</p>
+
+                    <ul class="list-inline text-center">
+                        <li>
+                            <a href="https://twitter.com/madflojo">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/bencane">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://angel.co/benjamin-cane">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-angellist fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/madflojo">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+
     </div>
   </div>
-</div>
-</div>
