--- a/templates/endpost.html
+++ b/templates/endpost.html
@@ -1,12 +1,10 @@
 <hr>
 <div align="center">
 {% if data['prevp'] %}
-<a class="btn-sm btn-primary" href="{{ data['siteurl'] }}{{ data['prevp'] }}"><i class="fa fa-chevron-left "></i> Previous</a>
+<a class="btn-sm text-left" href="{{ data['siteurl'] }}{{ data['prevp'] }}"><i class="fa fa-chevron-left "></i> Previous</a>
 {% endif %}
-<a class="btn-sm btn-primary" href="{{ data['siteurl'] }}{{ data['url'] }}#share"><i class="fa fa-share fa-lg"></i> Share</a>
-<a class="btn-sm btn-primary" href="{{ data['siteurl'] }}{{ data['url'] }}#comments"><i class="fa fa-comments fa-lg"></i> Comment</a>
 {% if data['nextp'] %}
-<a class="btn-sm btn-primary" href="{{ data['siteurl'] }}{{ data['nextp'] }}"><i class="fa fa-chevron-right "></i> Next</a>
+<a class="btn-sm text-right" href="{{ data['siteurl'] }}{{ data['nextp'] }}"><i class="fa fa-chevron-right "></i> Next</a>
 {% endif %}
 </div>
 <hr>
