Lots of little refinements

--- a/templates/authorinfo.html
+++ b/templates/authorinfo.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-md-8">
-                            <p>Benjamin is a Solutions Architect working on High and Continuous Availability systems in the financial services industry. He has been working with Linux and Unix systems for over 10 years. He is also the creator of <a href="https://runbook.io">Runbook.io</a> an open source application designed to identify and automatically mitigate infrastructure and application issues. You can think of it as IFTTT meets Nagios.</p>
+                            <p>Benjamin is a Systems Architect working on High and Continuous Availability systems in the financial services industry. He has been working with Linux and Unix systems for over 10 years. He is also the creator of <a href="https://runbook.io">Runbook.io</a> an open source application designed to identify and automatically mitigate infrastructure and application issues. You can think of it as IFTTT meets Nagios.</p>
 
 <p>In addition to blogging Benjamin is also a public speaker and has recently given a talk at SaltConf 2014 on <a href="http://www.slideshare.net/SaltStack/saltconf14-ben-cane-using-saltstack-in-high-availability-environtments">utilizing Saltstack within highly available enterprise environments</a>.</p>
 
