--- a/templates/archive.html
+++ b/templates/archive.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include "/home/bcane/bclog/templates/header.html" %}
+{% include "templates/header.html" %}
 <body>
 
-{% include "/home/bcane/bclog/templates/navbar.html" %}
+{% include "templates/navbar.html" %}
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <header class="intro-header" style="background-image: url('http://bencane.com/static/img/archive-bg.jpg')">
@@ -67,14 +67,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-		    {% include '/home/bcane/bclog/templates/shareaholic.html' %}
-                    <p class="copyright text-muted">Copyright &copy; Benjamin Cane 2014 - <a href="mailto:ben@bencane.com?subject=Sponsorship of BenCane.com">Sponsor this blog</a></p>
+		    {% include 'templates/shareaholic.html' %}
+                    <p class="copyright text-muted">Copyright &copy; Benjamin Cane 2014 - <a href="mailto:ben@bencane.com">Contact the Author</a></p>
                 </div>
             </div>
         </div>
     </footer>
 
-{% include "/home/bcane/bclog/templates/js_includes.html" %}
+{% include "templates/js_includes.html" %}
 
 </body>
 
