New blog post on cron executions

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -26,64 +26,55 @@
     <!-- Post Content -->
     <article>
         <div class="container">
-    <div class="row visible-lg">
-      <div align="center">
+    <div class="row"
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Bigger Banner - Sys-log -->
+<!-- Responsive -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
+     style="display:block"
      data-ad-client="ca-pub-0946238287085890"
-     data-ad-slot="4580867883"></ins>
+     data-ad-slot="6650633887"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-      </div>
-   </div> 
-  <div class="row visible-xs">
-  <div align="center">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Better Mobile -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:320px;height:100px"
-     data-ad-client="ca-pub-0946238287085890"
-     data-ad-slot="8091791889"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-  </div>
-  </div>
+    </div>
             <div class="row">
 
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-11 col-md-12 col-sm-12">
 			{{ data['data'] }}
+                </div>
+                <div class="col-lg-1 visible-lg">
+                  <center>
+                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- 160 wide skyscraper -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:160px;height:600px"
+     data-ad-client="ca-pub-0946238287085890"
+     data-ad-slot="3040400288"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</center>
+</div>
+</div>
+<div class="row">
+                
 
     		{% include 'templates/shareaholic.html' %}
-    <div class="row visible-lg">
+    <div class="row">
       <div align="center">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Bigger Banner - Sys-log -->
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Responsive -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
+     style="display:block"
      data-ad-client="ca-pub-0946238287085890"
-     data-ad-slot="4580867883"></ins>
+     data-ad-slot="6650633887"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
       </div>
    </div> 
-  <div class="row visible-xs">
-  <div align="center">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Better Mobile -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:320px;height:100px"
-     data-ad-client="ca-pub-0946238287085890"
-     data-ad-slot="8091791889"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-  </div>
-  </div>
 	   	{% include 'templates/disqus.html' %}
                 </div>
 		
