--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 		<h2>Latest Article</h2>
                 <div class="post-preview">
-                    <a href="{{ data['site_url'] }}{{ data['url'] }}">
+                    <a href="{{ data['siteurl'] }}{{ data['url'] }}">
                         <h2 class="post-title">
 			    {{ data['title'] }}
                         </h2>
