Finalizing hamerkop and templates

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,7 +8,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('http://bencane.com/static/img/post-bg.jpg')">
+    <header class="intro-header" style="background-image: url('/static/img/post-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -44,6 +44,7 @@
 			{{ data['data'] }}
                 </div>
                 <div class="col-lg-1 visible-lg">
+                  <p></p>
                   <center>
                   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- 160 wide skyscraper -->
