--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,14 +16,14 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="http://bencane.com">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="http://bencane.com/archive.html">Archive</a>
+                        <a href="/archive.html">Archive</a>
                     </li>
 		    <li class="divider"></li>
                     <li>
-                        <a href="{{ data['sitefeed'] }}"><i class="fa fa-rss"></i></a>
+                        <a href="{{ meta['site_feed'] }}"><i class="fa fa-rss"></i></a>
                     </li>
 		    <li>
 			<a href="http://bencane.us7.list-manage1.com/subscribe?u=52bad2a14ba3306a494c9739f&id=848cc53f28"><i class="fa fa-envelope"></i></a>
