--- a/templates/archive.html
+++ b/templates/archive.html
@@ -7,14 +7,13 @@
 {% include "navbar.html" %}
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('http://bencane.com/static/img/archive-bg.jpg')">
+    <header class="intro-header" style="background-image: url('/static/img/archive-bg.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
                         <h1>Archive</h1>
-                        <hr class="small">
-                        <span class="subheading">A collection of articles</span>
+                        <span class="subheading">A collection of Linux Systems Administration articles</span>
                     </div>
                 </div>
             </div>
@@ -24,32 +23,25 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="col-lg-12 col-md-12 col-sm-12">
  	<div class="panel panel-default">
         <div class="panel-heading">
           <h3 class="panel-title">The Archives</h3>
         </div>
         <table class="table table-striped table-hover">
-          <thead>
-          <tr>
-            <th class="span4"></th>
-            <th class="span9">Title:</th>
-            <th class="span2">Posted On:</th>
-          </tr>
-          </thead>
           <tbody>
 
-          {% for item in data['rpids'] %}
+          
+          {% for item in meta['post_ids']|reverse %}
           <tr>
-            {% if data['rowitems'][item]['lastpost'] %}
-            <td><center><span class="label label-success">Latest</span></center></td>
-            {% elif data['rowitems'][item]['popularity'] %}
-            <td><center><span class="label label-info">Popular</span></center></td>
-            {% else %}
-            <td><center></center></td>
+            <td>
+            {% if data[item]['popularity'] == True %}
+            <span class="label label-info pull-right">Popular</span>
             {% endif %}
-            <td><a href="{{ data['siteurl'] }}{{ data['rowitems'][item]['url'] }}">{{ data['rowitems'][item]['title'] }}</a></td>
-            <td>{{ data['rowitems'][item]['date'] }}</td>
+            <h3><a href="{{ data[item]['full_url'] }}">{{ data[item]['title'] }}</a></h3>
+                <small class="text-muted">Published on: {{ data[item]['date'] }}</small>
+                <p class="text-default">{{ data[item]['description'] }}</p>
+            </td>
           </tr>
           {% endfor %}
 
