--- a/templates/header.html
+++ b/templates/header.html
@@ -1,29 +1,40 @@
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- SEO Stuff -->
-    <title>{{ data['sitetitle'] }}</title>
-    {% if data['sitedescription'] %}
-    <meta name="description" content="{{ data['sitedescription'] }}">
+    {% if meta['page_type'] == "index" %}
+      <title>{{ meta['site_name'] }} - {{ meta['site_shortdesc'] }}</title>
+      <meta property="og:title" content="{{ meta['site_name'] }} - {{ meta['site_shortdesc'] }}"/>
+      <meta name="description" content="{{ meta['site_description'] }}">
+      <meta property="og:description" content="{{ meta['site_description'] }}"/>
+      <meta property="og:type" content="profile"/>
+      <meta property="og:type:proile:username" content="madflojo"/>
+      <meta property="og:type:proile:first_name" content="Benjamin"/>
+      <meta property="og:type:proile:last_name" content="Cane"/>
+      <meta name="keywords" content="{%- for item in meta['site_keywords'] -%}{{ item }}, {%- endfor -%}">
+    {% elif meta['page_type'] == "article" %}
+      <title>{{ data['title'] }} | {{ meta['site_name'] }}</title>
+      <meta property="og:title" content="{{ data['title'] }} | {{ meta['site_name'] }}"/>
+      <meta name="description" content="{{ data['description'] }}">
+      <meta property="og:description" content="{{ data['description'] }}"/>
+      <meta property="og:type" content="article"/>
+      <meta name="keywords" content="{% for item in data['cats'] %}{{ item }}, {% endfor %}{% for item in data['tags'] %}{{ item }}, {% endfor %}">
+      <meta property="og:type:article:author" content="{{ meta['authorlink'] }}" \>
+    {% else %}
+      <title>{{ meta['additional_pages'][meta['page_type']]['title'] }} | {{ meta['site_name'] }}</title>
+      <meta property="og:title" content="{{ meta['additional_pages'][meta['page_type']]['title'] }} | {{ meta['site_name'] }}"/>
+      <meta name="description" content="{{ meta['site_description'] }}">
+      <meta property="og:description" content="{{ meta['site_description'] }}"/>
+      <meta property="og:type" content="website"/>
+      <meta name="keywords" content="{%- for item in meta['site_keywords'] -%}{{ item }}, {%- endfor -%}">
     {% endif %}
-    <meta name="keywords" content="{% for item in data['cats'] %}{{ item }}, {% endfor %}{% for item in data['tags'] %}{{ item }}, {% endfor %}">
-    <meta name="author" content="{{ data['author'] }}">
-    <meta property="og:type" content="{{ data['pagetype'] }}"/>
-    <meta property="og:title" content="{{ data['sitetitle'] }}"/>
-    {% if data['pagetype'] == "article" %}
-    <meta property="og:url" content="{{ data['siteurl'] }}{{ data['url'] }}"/>
-    {% endif %}
-    <meta property="og:description" content="{{ data['description'] }}"/>
-    <meta property="og:site_name" content="{{ data['sitename'] }}"/>
-    {% if data['thumbnail'] %}
-    <meta property="og:image" content="{{ data['thumbnail'] }}"/>
-    {% endif %}
-    {% if data['pagetype'] == "article" %}
-    <meta property="article:author" content="{{ data['authorlink'] }}" \>
-    <link rel="author" href="{{ data['authorlink'] }}" \>
-    {% endif %}
+
+    <meta property="og:url" content="{{ meta['site_url'] }}{{ data['url'] }}"/>
+    <meta name="author" content="{{ meta['site_author'] }}">
+    <link rel="author" href="{{ meta['site_authorlink'] }}" \>
+    <meta property="og:image" content="{{ meta['site_thumbnail'] }}"/>
+    <meta property="og:site_name" content="{{ meta['site_name'] }}"/>
 
     <!-- Bootstrap Core CSS -->
     <link href="http://bencane.com/static/css/bootstrap.min.css" rel="stylesheet">
@@ -35,13 +46,6 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
     <!-- Shareaholic -->
     <script type="text/javascript">
