--- a/templates/index.html
+++ b/templates/index.html
@@ -50,8 +50,8 @@
             <div class="col-lg-4 col-md-4">
               <h2>Books I've Written</h2>
               <div class="well">
-                 <a href="http://amzn.to/1Mdbtkt" target="_blank"><h3>Red Hat Enterprise Linux Troubleshooting Guide</h3></a>
-                  <center><a href="http://amzn.to/1Mdbtkt" target="_blank"><img src="/static/img/RHELTroubleshootingCover.jpg" class="img-responsive" border=0/></a></center>
+                 <a href="http://amzn.com/1785283553" target="_blank"><h3>Red Hat Enterprise Linux Troubleshooting Guide</h3></a>
+                  <center><a href="http://amzn.com/1785283553" target="_blank"><img src="/static/img/RHELTroubleshootingCover.jpg" class="img-responsive" border=0/></a></center>
 <p>
 In this book, you begin with simple troubleshooting best practices and get an overview of the Linux commands used for troubleshooting. The book will cover the troubleshooting methods for web applications and services such as Apache and MySQL. Then, you will learn to identify system performance bottlenecks and troubleshoot network issues; all while learning about vital troubleshooting steps such as understanding the problem statement, establishing a hypothesis, and understanding trial, error, and documentation. Next, the book will show you how to capture and analyze network traffic, use advanced system troubleshooting tools such as strace, tcpdump & dmesg, and discover common issues with system defaults.
 </p><p>
