--- a/templates/blog.html
+++ b/templates/blog.html
@@ -40,22 +40,32 @@
     </div>
             <div class="row">
 
-                <div class="col-lg-11 col-md-12 col-sm-12">
+                <div class="col-lg-8 col-md-8 col-sm-12">
 			{{ data['data'] }}
                 </div>
-                <div class="col-lg-1 visible-lg">
+                <div class="col-lg-4 visible-lg col-md-4 visible-md">
+
+              <div class="row">
+              <h4>Publications</h4>
+              <div class="well">
+                 <a href="http://amzn.com/1785283553" target="_blank"><h3>Red Hat Enterprise Linux Troubleshooting Guide</h3></a>
+                  <center><a href="http://amzn.com/1785283553" target="_blank"><img src="/static/img/RHELTroubleshootingCover.jpg" class="img-responsive" border=0/></a></center>
                   <p></p>
-                  <center>
-                  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- 160 wide skyscraper -->
+                 <a href="http://amzn.to/1Mdbtkt" class="btn btn-block btn-primary" role="button" target="_blank">Buy on Amazon</a>
+              </div>
+            </div>
+    <div class="row"
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Responsive -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:160px;height:600px"
+     style="display:block"
      data-ad-client="ca-pub-0946238287085890"
-     data-ad-slot="3040400288"></ins>
+     data-ad-slot="6650633887"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</center>
+    </div>
 </div>
 </div>
 <div class="row">
