Fixing shareaholic and other includes

--- a/templates/header.html
+++ b/templates/header.html
@@ -37,36 +37,19 @@
     <meta property="og:site_name" content="{{ meta['site_name'] }}"/>
 
     <!-- Bootstrap Core CSS -->
-    <link href="http://bencane.com/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//bencane.com/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="http://bencane.com/static/css/clean-blog.min.css" rel="stylesheet">
+    <link href="//bencane.com/static/css/clean-blog.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- Shareaholic -->
-    <script type="text/javascript">
-		//<![CDATA[
-		  (function() {
-		    var shr = document.createElement('script');
-		    shr.setAttribute('data-cfasync', 'false');
-		    shr.src = '//dsms0mj1bbhn4.cloudfront.net/assets/pub/shareaholic.js';
-		    shr.type = 'text/javascript'; shr.async = 'true';
-		    shr.onload = shr.onreadystatechange = function() {
-		      var rs = this.readyState;
-		      if (rs && rs != 'complete' && rs != 'loaded') return;
-		      var apikey = '098ec2a3913f9ec74de565aa3ec3d741';
-		      try { Shareaholic.init(apikey); } catch (e) {}
-		    };
-		    var s = document.getElementsByTagName('script')[0];
-		    s.parentNode.insertBefore(shr, s);
-		  })();
-		//]]>
-		</script>
-     <!-- End Sharaholic -->
+    <script type='text/javascript' src='//dsms0mj1bbhn4.cloudfront.net/assets/pub/shareaholic.js' data-shr-siteid='098ec2a3913f9ec74de565aa3ec3d741' data-cfasync='false' async='async'></script>
+    <!-- End Sharaholic -->
 
     <!-- Google Analytics -->
     <script>
