--- a/templates/blog.html
+++ b/templates/blog.html
@@ -39,12 +39,25 @@
 </script>
     </div>
             <div class="row">
+              <!--  <div class="row">
+                <div class="col-sm-12 col-xs-12 visible-xs visible-sm">
+                <h4>Sponsored by</h4>
+                  <img src="http://placehold.it/125x125">
+                </div>
+                </div> -->
 
                 <div class="col-lg-8 col-md-8 col-sm-12">
 			{{ data['data'] }}
                 </div>
                 <div class="col-lg-4 visible-lg col-md-4 visible-md">
 
+              <!-- <div class="row">
+              <h4>Sponsored by</h4>
+                  <center>
+                  <img src="http://placehold.it/125x125">
+                  <img src="http://placehold.it/250x125">
+                  </center>
+              </div> -->
               <div class="row">
               <h4>Publications</h4>
               <div class="well">
@@ -69,7 +82,7 @@
 </div>
 </div>
 <div class="row">
-                
+
 
     		{% include 'shareaholic.html' %}
     <div class="row">
@@ -85,12 +98,12 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
       </div>
-   </div> 
+   </div>
 	   	{% include 'disqus.html' %}
                 </div>
-		
+
             </div>
-	
+
         </div>
     </article>
 
