Adding pics, revising ads

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -26,17 +26,18 @@
     <!-- Post Content -->
     <article>
         <div class="container">
-    <div class="row"
+    <div class="row">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Responsive -->
+<!-- Top of Page -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-0946238287085890"
-     data-ad-slot="6650633887"
+     data-ad-slot="5617960684"
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+    <p></p>
     </div>
             <div class="row">
               <div class="row">
@@ -76,12 +77,12 @@
     		{% include 'shareaholic.html' %}
     <div class="row">
       <div align="center">
-      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Responsive -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Bottom Of Page -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-0946238287085890"
-     data-ad-slot="6650633887"
+     data-ad-slot="6955093086"
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
