Adding advertise here box

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -65,6 +65,10 @@
                   <div class="row">
                   <a href="https://www.datadoghq.com/lpg/?utm_source=Advertisement&utm_medium=Advertisement&utm_campaign=Bencane"><img src="/static/img/datadog-300x250.png" border=0></a>
                   </div>
+                  <hr class="hr">
+                  <div class="row">
+                  <a href="mailto:ben@bencane.com?subject=Sponsorship"><img src="/static/img/advertise-here.jpg" border=0></a>
+                  </div>
                   </center>
               </div>
               <div class="row">
