Adding Page Ads

--- a/templates/header.html
+++ b/templates/header.html
@@ -61,5 +61,13 @@
     ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
-
+    <!-- Google Page Ads -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-0946238287085890",
+        enable_page_level_ads: true
+      });
+    </script>
+    <!-- End Google Page Ads -->
 </head>
