--- a/templates/authorinfo.html
+++ b/templates/authorinfo.html
@@ -1,13 +1,26 @@
   <div class="row">
+    {% if meta['page_type'] == "index" %}
     <div class="col-md-4">
+    {% endif %}
       <!--Sidebar content-->
-  <p>    <img src="{{ data['siteurl'] }}/static/img/benc380x250.png" alt="Picture of Benjamin Cane" class="img-rounded img-responsive" /></p>
+    <img src="{{ data['siteurl'] }}/static/img/benc380x250.png" alt="Picture of Benjamin Cane" class="img-thumbnail img-responsive" />
+    {% if meta['page_type'] == "index" %}
     </div>
+    {% endif %}
 
+    {% if meta['page_type'] == "index" %}
     <div class="col-md-8">
-                            <p>Benjamin is a Systems Architect working on High and Continuous Availability systems in the financial services industry. He has been working with Linux and Unix systems for over 10 years. He is also the creator of <a href="https://runbook.io">Runbook.io</a> an open source application designed to identify and automatically mitigate infrastructure and application issues. You can think of it as IFTTT meets Nagios.</p>
+    {% else %}
+    <p></p>
+    <div class="well">
+    {% endif %}
+    Benjamin is a Systems Architect working in the financial services industry focused on platforms that require Continuous Availability. He has been working with Linux and Unix for over 10 years now and has recently published his first book; <a href="http://amzn.com/1785283553" target="_blank">Red Hat Enterprise Linux Troubleshooting Guide</a>.
 
-<p>In addition to this blog Benjamin has recently published a book; <a href="http://amzn.com/1785283553" target="_blank">Red Hat Enterprise Linux Troubleshooting Guide</a> and given a talk at SaltConf 2014 on <a href="http://www.slideshare.net/SaltStack/saltconf14-ben-cane-using-saltstack-in-high-availability-environtments">utilizing Saltstack within highly available enterprise environments</a>.</p>
+    {% if meta['page_type'] == "index" %}
+    <p></p>
+    In addition to writing about Linux; Benjamin is the creator of <a href="https://runbook.io" target="_blank">Runbook</a>, an infrastructure monitoring and automated remediation service. Benjamin is has also recently spoken at SaltConf 2014 where he presented; <a href="https://youtu.be/R1bEEzwYeqk" target="_blank">Using SaltStack in High Availability Environments</a>.
+    {% endif %}
+    <hr class="hr">
 
                     <ul class="list-inline text-center">
                         <li>
