Adding syntax highlighting

--- a/templates/header.html
+++ b/templates/header.html
@@ -37,10 +37,10 @@
     <meta property="og:site_name" content="{{ meta['site_name'] }}"/>
 
     <!-- Bootstrap Core CSS -->
-    <link href="//bencane.com/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="//bencane.com/static/css/clean-blog.min.css" rel="stylesheet">
+    <link href="/static/css/clean-blog.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
