Adding read time to archive

--- a/templates/archive.html
+++ b/templates/archive.html
@@ -39,7 +39,7 @@
             <span class="label label-info pull-right">Popular</span>
             {% endif %}
             <h3><a href="{{ data[item]['full_url'] }}">{{ data[item]['title'] }}</a></h3>
-                <small class="text-muted">Published on: {{ data[item]['date'] }} | {{data['read_time']}} min read</small>
+                <small class="text-muted">Published on: {{ data[item]['date'] }} | {{data[item]['read_time']}} min read</small>
                 <p class="text-default">{{ data[item]['description'] }}</p>
             </td>
           </tr>
